[package]
name = "blackopt"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Black-box optimization with TPE, CMA-ES, MORBO, NSGA-II/III, and more"
repository = "https://github.com/brayniac/blackopt"
keywords = ["optimization", "hyperparameter", "bayesian", "black-box"]
categories = ["algorithms", "science"]
authors = ["Brian Martin <brian@thermitesolutions.com>"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libm = "0.2"
rand_distr = "0.4"
thiserror = "2"
